# NetNemesis

./: .gitignore  CMakeLists.txt  README.md
include/: netnemesis.h
scripts/: setup.sh
src/: arp_spoofer.cpp  attacks.cpp  botnet.cpp  crypto.cpp  fingerprint.cpp  icmp_flood.cpp  main.cpp  packet_crafter.cpp  scanner.cpp  slowloris.cpp  spoofer.cpp  utils.cpp
